--- a/style.css
+++ b/style.css
@@ -32,6 +32,15 @@ body {
     width: fit-content;
     font-family: "Iceland", serif;
     font-size: clamp(25px, 7vw, 30px);
+    box-shadow: 0px 6px 1px var(--shadow);
+}
+
+#generateBtn{
+    background-color: var(--secondary);
+    width: fit-content;
+    font-size: clamp(13px, 4vw, 17px);
+    box-shadow: 0px 3px 3px var(--shadow);
+    cursor: pointer;
 }
 
 .checkbox {
@@ -40,6 +49,8 @@ body {
     width: 1.2em;
     aspect-ratio: 1/1;
     cursor: pointer;
+    box-shadow: 0px 5px 5px var(--shadow);
+
 }
 
 .checkboxOn {
@@ -51,6 +62,8 @@ body {
     font-size: clamp(15px, 4vw, 23px);
     background-color: var(--secondary);
     width: fit-content;
+    box-shadow: 0px 4px 3px var(--shadow);
+
 
 }
 
