--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
     font-family: "Iceland", serif;
     font-size: clamp(25px, 7vw, 30px);
     box-shadow: 0px 6px 1px var(--shadow);
+    user-select: auto;
+    -webkit-user-select: auto;
 }
 
 #generateBtn {
@@ -42,6 +44,7 @@ body {
     font-size: clamp(13px, 4vw, 17px);
     box-shadow: 0px 2px 2px var(--accentShadow);
     cursor: pointer;
+
 }
 
 .checkbox {
@@ -106,4 +109,23 @@ body {
 
 .themeBtn {
     cursor: pointer;
+}
+
+
+.buttonClick {
+    animation: buttonClick 0.25s 0s forwards;
+}
+
+@keyframes buttonClick {
+    0% {
+        scale: 1;
+    }
+
+    50% {
+        scale: 0.7;
+    }
+
+    100% {
+        scale: 1;
+    }
 }
